added schema free dropdown in design tab. reset attributes , state model and wizard on enabling schema free . disable design tab and state model ui screen

--- a/src/app/home/schema-builder/schema-builder.component.scss
+++ b/src/app/home/schema-builder/schema-builder.component.scss
@@ -81,6 +81,11 @@
     max-height: calc(100vh - 244px);
     padding-bottom: 10px !important;
   }
+
+  .schema-free{
+    min-height: 58vh;
+  }
+
   .copy-symbol {
     right: 10px;
     top: 10px;
