--- a/src/app/home/schema-builder/schema-builder.component.html
+++ b/src/app/home/schema-builder/schema-builder.component.html
@@ -96,7 +96,7 @@
               <img src="./assets/img/Book.png" alt="Schema Free">
               <div class='font-weight-bold mt-3'>Schema Free</div>
               <div class='text-secondary mt-2'>
-                Add data without any structure in app centre, you can use it as repository to store data.
+                Add data without any structure in the Appcentre, you can use it as a repository to store the data.
               </div>
             </div>
           </div>
