--- a/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
+++ b/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
@@ -91,7 +91,7 @@
                             Permission
                         </div>
                         <div class="tab px-3" [ngClass]="{'text-accent border-accent':activeTab === 2}"
-                            (click)="activeTab=2">
+                            (click)="activeTab=2" *ngIf="!schemaFree"> 
                             Condition
                         </div>
                     </div>
