--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.html
@@ -75,7 +75,7 @@
       <ng-container *ngIf="!adminRole && makerCheckerData">
         <div class='d-flex justify-content-between mt-4 py-2 px-3 bg-light rounded'>
           <div class="font-weight-bold ">
-            Maker Checker
+            Workflows
           </div>
         </div>
         <div class="role-list-item-body bg-white font-normal b rounded mt-4">
