--- a/src/app/home/schema-builder/schema-builder.component.html
+++ b/src/app/home/schema-builder/schema-builder.component.html
@@ -96,7 +96,8 @@
               <img src="./assets/img/Book.png" alt="Schema Free">
               <div class='font-weight-bold mt-3'>Schema Free</div>
               <div class='text-secondary mt-2'>
-                Add data without any structure in the Appcenter, you can use it as a repository to store the data.
+                Schema-free data service allows to you store documents without defining any schema.
+                Data validations can only be enforced using the validation hooks.
               </div>
             </div>
           </div>
@@ -182,7 +183,7 @@
                 <span class='side-nav-tab'
                   [ngClass]="{'text-accent' : experienceSideNavActiveTab == 3 , 'text-bold' : experienceSideNavActiveTab == 3}"
                   (click)='experienceSideNavActiveTab = 3'>
-                  Maker Checker
+                  Workflows
                 </span>
               </div>
             </div>
