--- a/src/app/home/agents/agents.component.html
+++ b/src/app/home/agents/agents.component.html
@@ -12,7 +12,7 @@
         </span>
     </div>
     <div class="d-flex flex-column w-100">
-        <div class="d-flex align-items-center justify-content-center mb-3">
+        <!-- <div class="d-flex align-items-center justify-content-center mb-3">
             <div class="btn-group btn-group-toggle" ngbRadioGroup [(ngModel)]="agentType"
                 (ngModelChange)="selectAgentList()">
                 <label ngbButtonLabel class="btn-outline-accent">
@@ -22,7 +22,7 @@
                     <input ngbButton type="radio" value="PARTNERAGENT"> Partner Agents
                 </label>
             </div>
-        </div>
+        </div> -->
         <div class="grid-container position-relative">
             <div
                 class="ag-grid-options d-flex align-items-center justify-content-between border border-border border-bottom-0 bg-light px-3">
