--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -116,7 +116,7 @@
                 </div>
                 <span *ngIf="functionRoute.isActive" class="fa fa-angle-right mr-3"></span>
             </div>
-            <ng-container *ngIf="enableB2b">
+            <ng-container>
                 <div class="icon-block-group text-secondary border-top border-border pt-3 pl-2"
                     *ngIf="(hasPermission('PMDS') || hasPermission('PVDS')) || (hasPermission('PML') || hasPermission('PVL'))">
                     Integration
@@ -165,7 +165,7 @@
                     </div>
                     <span *ngIf="nanoServiceRoute.isActive" class="fa fa-angle-right mr-3"></span>
                 </div> -->
-                <!-- <div *ngIf="hasAgentsPermission" #agentRoute="routerLinkActive"
+                <div *ngIf="hasAgentsPermission" #agentRoute="routerLinkActive"
                     class="icon-block hover d-flex align-items-center justify-content-between my-2"
                     routerLinkActive="text-accent bg-white active" [routerLink]="['agent']" id="agent"
                     (mouseover)="hover.agent = true" (mouseleave)="hover.agent = false">
@@ -175,7 +175,7 @@
                         <span class="text" [ngClass]="{'text-accent':hover.agent}">Agents</span>
                     </div>
                     <span *ngIf="agentRoute.isActive" class="fa fa-angle-right mr-3"></span>
-                </div> -->
+                </div>
             </ng-container>
             <ng-container
                 *ngIf="hasGroupsPermission || hasUsersPermission || hasBotPermission || hasBookmarkPermission || hasInsightsPermission">
